--- a/RaceWPF/MainWindow.xaml
+++ b/RaceWPF/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="720" Width="1280">
     <Window.DataContext>
-        <local:DataContextMainWindow/>
+        <local:DataContextMainWindow x:Name="DataContextMainWindow"/>
     </Window.DataContext>
     <Grid Background="DarkGreen">
         <DockPanel>
